<resources>
    <string name="app_name">iGuide</string>
    <string name="app_desc">Smart navigation for the visually impaired</string>
    <string name="welcome">Welcome to EyeGuide</string>
    <string name="iguide_logo">iGuide Logo</string>
    <string name="audio_repeat">Shake to repeat audio</string>
    <string name="change_dest">Double tap to change destination</string>
    <string name="move">Move towards direction</string>
    <string name="enroute">You are enroute to:</string>
    <string name="astray">You are moving astray from:</string>
    <string name="dest_reach">You have reached:</string>
    <string name="dest"><u>Destination 1</u></string>
    <string name="passby">You have just walked pass: </string>
    <string name="where_to_go">Where would you like to go?</string>
    <string name="go_nearby">Would you like to go nearby?</string>


    <!-- STT TEST -->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
</resources>
